[gd_scene load_steps=17 format=2]

[ext_resource path="res://Cenas/Efeitos_sonoros/musica_game_over.mp3" type="AudioStream" id=1]
[ext_resource path="res://Cenas/Efeitos_sonoros/selec_personagem.mp3" type="AudioStream" id=2]
[ext_resource path="res://Cenas/Efeitos_sonoros/som_shirken_click.mp3" type="AudioStream" id=3]
[ext_resource path="res://Cenas/Fonte/njnaruto.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Cenas/Game_over/script_game_over.gd" type="Script" id=5]
[ext_resource path="res://Cenas/Game_over/Imagens/cena_game_over.png" type="Texture" id=6]
[ext_resource path="res://Cenas/Game_over/Meme/sasuke_funk.png" type="Texture" id=7]
[ext_resource path="res://Cenas/Game_over/Meme/naruto_funk.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 43
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 5
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.968627, 0.647059, 0.333333, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 1, 0.4, 0, 1 )
border_blend = true
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.968627, 0.647059, 0.333333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.4, 0, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.968627, 0.647059, 0.333333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.996078, 0.443137, 0.0588235, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.968627, 0.647059, 0.333333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.4, 0, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="Animation" id=6]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Img_game_over/Naruteiro:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Img_game_over/Susukeiro:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Img_game_over/Naruteiro:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 3.7, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ true, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Img_game_over/Susukeiro:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 3.7, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "batidafinal"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Img_game_over/Naruteiro:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Img_game_over/Susukeiro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "inicio"
length = 7.6
tracks/0/type = "value"
tracks/0/path = NodePath("Img_game_over/Naruteiro:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Img_game_over/Susukeiro:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Img_game_over/Naruteiro:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 3.7, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Img_game_over/Susukeiro:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 3.7, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[node name="Game_over" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Img_game_over" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 640, 360 )
scale = Vector2( 2.13333, 1.80011 )
texture = ExtResource( 6 )

[node name="Naruteiro" type="Sprite" parent="Img_game_over"]
position = Vector2( -149.934, 0 )
scale = Vector2( 1.33274, 1.77767 )
texture = ExtResource( 8 )

[node name="Susukeiro" type="Sprite" parent="Img_game_over"]
position = Vector2( 148.558, 0 )
scale = Vector2( 1.16494, 2.06173 )
texture = ExtResource( 7 )

[node name="Butt_Inicio" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = 161.0
margin_right = 112.0
margin_bottom = 223.0
rect_scale = Vector2( 0.818744, 0.818744 )
custom_colors/font_color_pressed = Color( 0.968627, 0.647059, 0.333333, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Inicio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -15.0

[node name="Som_selec" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="Som_press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Anima" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/batidafinal = SubResource( 8 )
anims/inicio = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 22.0
one_shot = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[connection signal="mouse_entered" from="Butt_Inicio" to="." method="_on_Butt_Inicio_mouse_entered"]
[connection signal="pressed" from="Butt_Inicio" to="." method="_on_Butt_Inicio_pressed"]
[connection signal="animation_finished" from="Anima" to="." method="_on_Anima_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
